--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,4 @@
+use Illuminate\Support\Facades\Auth;
 {
     "name": "laravel/laravel",
     "type": "project",
@@ -9,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
